[package]
name = "audio_recorder"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[dependencies]
clap = { version = "4.4.14", features = ["cargo"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
hound = "3.5.1"
pv_recorder = "1.2.1"
rodio = { version = "0.17.3", default-features = false, features = ["symphonia-mp3"] }
